@@ -22,6 +22,8 @@ python-apt (0.8.2) UNRELEASED; urgency=low
   * apt/cache.py:
     - set Dir::bin::dpkg if a alternate rootdir is given
       (LP: #885895)
+  * apt/package.py:
+    - add new "suggests" property, thanks to Christop Groth
   
   [ Tshepang Lekhonkhobe ]
   * rm usage of camelcase in cache.py doc (closes: #626617)
